Closed Bug 979350 Opened 10 years ago Closed 10 years ago

Dynamic content behind Flash (transparent) is not updating in FF 27 with HW accel disabled

Categories

(Core Graveyard :: Plug-ins, defect, P3)

27 Branch
x86_64
Windows 8.1
defect

Tracking

(Not tracked)

RESOLVED FIXED
mozilla32

People

(Reporter: info, Unassigned)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0 (Beta/Release)
Build ID: 20140212131424

Steps to reproduce:

http://dottrombone.com

Animated GIF behind transparent Flash content (head) is not animating anymore with FF 27.0.1.  Works in other browsers and always used to work in FF.


Actual results:

GIF does not animate.  Will update if browser is resized, but never animates.


Expected results:

Animated GIF background should be animated around the boarders of the main page header Flash content.
WFM on Windows Nightly builds. Can you try a build from nightly.mozilla.org and tell me whether its fixes there?
Flags: needinfo?(info)
Priority: -- → P3
The bug is still present in the current nightly build.
Flags: needinfo?(info)
Could you please attach your about:support data? Trying to figure out what's different about your setup and it may be related to accelerated graphics or something like that.
Flags: needinfo?(info)
Keywords: qawanted
Application Basics
------------------

Name: Firefox
Version: 27.0.1
User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64; rv:27.0) Gecko/20100101 Firefox/27.0

Crash Reports for the Last 3 Days
---------------------------------

All Crash Reports

Extensions
----------

Name: CacheViewer2
Version: 1.5
Enabled: true
ID: cacheview2@scriptkitz.ml

Name: Firebug
Version: 1.12.6
Enabled: true
ID: firebug@software.joehewitt.com

Name: FlashFirebug
Version: 4.7.2
Enabled: true
ID: flashfirebug@o-minds.com

Name: Adobe Acrobat - Create PDF
Version: 1.2
Enabled: false
ID: web2pdfextension@web2pdf.adobedotcom

Name: FiddlerHook
Version: 2.4.5.9
Enabled: false
ID: fiddlerhook@fiddler2.com

Important Modified Preferences
------------------------------

accessibility.typeaheadfind.flashBar: 0
browser.cache.disk.capacity: 358400
browser.cache.disk.smart_size.enabled: false
browser.cache.disk.smart_size.first_run: false
browser.cache.disk.smart_size.use_old_max: false
browser.cache.disk.smart_size_cached_value: 358400
browser.places.smartBookmarksVersion: 6
browser.sessionstore.upgradeBackup.latestBuildID: 20140212131424
browser.startup.homepage: http://dottrombone.com/
browser.startup.homepage_override.buildID: 20140212131424
browser.startup.homepage_override.mstone: 27.0.1
browser.tabs.warnOnClose: false
dom.mozApps.used: true
extensions.lastAppVersion: 27.0.1
font.internaluseonly.changed: true
gfx.direct3d.last_used_feature_level_idx: 0
keyword.enabled: false
network.cookie.prefsMigrated: true
places.database.lastMaintenance: 1393896324
places.history.expiration.transient_current_max_pages: 104858
plugin.disable_full_page_plugin_for_types: application/pdf
plugin.importedState: true
plugins.load_appdir_plugins: true
print.printer_Brother_HL-3170CDW_series.print_bgcolor: false
print.printer_Brother_HL-3170CDW_series.print_bgimages: false
print.printer_Brother_HL-3170CDW_series.print_colorspace:
print.printer_Brother_HL-3170CDW_series.print_command:
print.printer_Brother_HL-3170CDW_series.print_downloadfonts: false
print.printer_Brother_HL-3170CDW_series.print_duplex: -998467328
print.printer_Brother_HL-3170CDW_series.print_edge_bottom: 0
print.printer_Brother_HL-3170CDW_series.print_edge_left: 0
print.printer_Brother_HL-3170CDW_series.print_edge_right: 0
print.printer_Brother_HL-3170CDW_series.print_edge_top: 0
print.printer_Brother_HL-3170CDW_series.print_evenpages: true
print.printer_Brother_HL-3170CDW_series.print_footercenter:
print.printer_Brother_HL-3170CDW_series.print_footerleft: &PT
print.printer_Brother_HL-3170CDW_series.print_footerright: &D
print.printer_Brother_HL-3170CDW_series.print_headercenter:
print.printer_Brother_HL-3170CDW_series.print_headerleft: &T
print.printer_Brother_HL-3170CDW_series.print_headerright: &U
print.printer_Brother_HL-3170CDW_series.print_in_color: true
print.printer_Brother_HL-3170CDW_series.print_margin_bottom: 0.5
print.printer_Brother_HL-3170CDW_series.print_margin_left: 0.5
print.printer_Brother_HL-3170CDW_series.print_margin_right: 0.5
print.printer_Brother_HL-3170CDW_series.print_margin_top: 0.5
print.printer_Brother_HL-3170CDW_series.print_oddpages: true
print.printer_Brother_HL-3170CDW_series.print_orientation: 0
print.printer_Brother_HL-3170CDW_series.print_page_delay: 50
print.printer_Brother_HL-3170CDW_series.print_paper_data: 1
print.printer_Brother_HL-3170CDW_series.print_paper_height: 11.00
print.printer_Brother_HL-3170CDW_series.print_paper_name:
print.printer_Brother_HL-3170CDW_series.print_paper_size_type: 0
print.printer_Brother_HL-3170CDW_series.print_paper_size_unit: 0
print.printer_Brother_HL-3170CDW_series.print_paper_width: 8.50
print.printer_Brother_HL-3170CDW_series.print_plex_name:
print.printer_Brother_HL-3170CDW_series.print_resolution: 378486852
print.printer_Brother_HL-3170CDW_series.print_resolution_name:
print.printer_Brother_HL-3170CDW_series.print_reversed: false
print.printer_Brother_HL-3170CDW_series.print_scaling: 1.00
print.printer_Brother_HL-3170CDW_series.print_shrink_to_fit: true
print.printer_Brother_HL-3170CDW_series.print_to_file: false
print.printer_Brother_HL-3170CDW_series.print_unwriteable_margin_bottom: 0
print.printer_Brother_HL-3170CDW_series.print_unwriteable_margin_left: 0
print.printer_Brother_HL-3170CDW_series.print_unwriteable_margin_right: 0
print.printer_Brother_HL-3170CDW_series.print_unwriteable_margin_top: 0
privacy.cpd.offlineApps: true
privacy.sanitize.migrateFx3Prefs: true
privacy.sanitize.timeSpan: 0
storage.vacuum.last.index: 1
storage.vacuum.last.places.sqlite: 1393445257

Graphics
--------

Adapter Description: NVIDIA GeForce 8400GS
Adapter Drivers: nvd3dumx,nvwgf2umx,nvwgf2umx nvd3dum,nvwgf2um,nvwgf2um
Adapter RAM: 1024
Device ID: 0x10c3
DirectWrite Enabled: false (6.3.9600.16384)
Driver Date: 10-23-2013
Driver Version: 9.18.13.3165
GPU #2 Active: false
GPU Accelerated Windows: 0/1 Basic
Vendor ID: 0x10de
windowLayerManagerRemote: false
AzureCanvasBackend: skia
AzureContentBackend: cairo
AzureFallbackCanvasBackend: cairo
AzureSkiaAccelerated: 0

JavaScript
----------

Incremental GC: true

Accessibility
-------------

Activated: false
Prevent Accessibility: 0

Library Versions
----------------

NSPR
Expected minimum version: 4.10.2
Version in use: 4.10.2

NSS
Expected minimum version: 3.15.4 Basic ECC
Version in use: 3.15.4 Basic ECC

NSSSMIME
Expected minimum version: 3.15.4 Basic ECC
Version in use: 3.15.4 Basic ECC

NSSSSL
Expected minimum version: 3.15.4 Basic ECC
Version in use: 3.15.4 Basic ECC

NSSUTIL
Expected minimum version: 3.15.4
Version in use: 3.15.4
Flags: needinfo?(info)
ok, I can reproduce this on Nightly by disabling HW accel. If you have time, I'd love to get a nightly regression range for this bug: there is a guide at https://quality.mozilla.org/docs/bugzilla/guide-to-triaging-bugs-for-firefox/finding-a-regression-window/

You'd probably be looking for the nightlies between FF26 and 27, which should be between 2013-09-16 and 2013-10-28.

If you don't have time to help with this, I'll see if we have other QA resources to help out.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Flags: needinfo?
Summary: Dynamic content behind Flash (transparent) is not updating in FF 27 → Dynamic content behind Flash (transparent) is not updating in FF 27 with HW accel disabled
Yep, I'll check it out.  Also, it is not present on my Vista machine, just my Windows 8.1 machine.
Mozregression is pretty cool.  It identified that the problem was between 2013-10-14 and 2013-10-15.  It tried to get inbound builds but that failed because I'm on a 64bit system.
Inbound builds between a50141faaab9 and febfe3c7732b.
Excellent, that was quick work!

Possibly:
85901120533c	Matt Woodrow — Bug 923542 - Draw to the correct destination rect when computing alpha masks. r=ajones
21793156b6ea	Matt Woodrow — Bug 926258 - Implement a Moz2D version of gfxPath. r=Bas
b37762151fbd	Matt Woodrow — Bug 926258 - Remove gfxFlattenedPath as it doesn't match the abstraction we want for Moz2D. r=roc
a92cf0787b53	Matt Woodrow — Bug 922942 - Add a Validate() pass to BasicLayers to avoid needing to create a dummy destination context. r=roc
5133ba07ea89	Matt Woodrow — Bug 922942 - Clean up some no longer used ShadowLayers code from BasicLayers. r=roc
Flags: needinfo? → needinfo?(matt.woodrow)
I also confirm the issue on 31.0a1 (2014-03-25), win 7, hwa disabled
Keywords: qawanted
ReadbackProcessor uses the valid region of layers to decide what needs copying, so doing this *after* we've validated everything doesn't work.
Attachment #8419919 - Flags: review?(roc)
Flags: needinfo?(matt.woodrow)
Comment on attachment 8419919 [details] [diff] [review]
Move plugin readback into validate

Review of attachment 8419919 [details] [diff] [review]:
-----------------------------------------------------------------

::: gfx/layers/basic/BasicThebesLayer.cpp
@@ +142,5 @@
>  
>    if (!BasicManager()->IsRetained()) {
>      return;
>    }
> +  

trailing whitespace

@@ +196,5 @@
>      // instead.
>      NS_WARN_IF_FALSE(state.mRegionToDraw.IsEmpty(),
>                       "No context when we have something to draw, resource exhaustion?");
>    }
> +  

trailing whitespace
Attachment #8419919 - Flags: review?(roc) → review+
https://hg.mozilla.org/mozilla-central/rev/02eb695c8640
https://hg.mozilla.org/mozilla-central/rev/d64fb8e9ef3f
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: