Bug 979350 - Readback ThebesLayers for plugin backgrounds during the Validate pass, not the compositing pass. r=roc